Added submission functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
         Max Rank: <span id="mrank"></span><br>
         Current Rank: <span id="crank"></span><br>
     </p>
+    <label for="userHandle">No of Days: </label><br>
+    <input type="text" id="days" name="days" value="1"><br>
+    <button onClick="SubmitForm()">Submit</button>
+
+    <p>
+        Correct Answer: <span id="AC"></span><br>
+        Wrong Answer <span id="WA"></span><br>
+        Runtime Error: <span id="RE"></span><br>
+        Time Limit Exceeded: <span id="TLE"></span><br>
+        Memory Limit Exceeded: <span id="MLE"></span><br>
+    </p>
+
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 </body>
 </html>
